tests/ui/invalid-ident-space.fail.stderr
error: Invalid identifier: "hello world"
 --> tests/ui/invalid-ident-space.fail.rs:2:13
  |
2 |     #name = "hello world"
  |             ^^^^^^^^^^^^^
